test/fixtures/document/source/objects/TestObj__c/fields/Custom_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text__c</fullName>
    <description>Custom text description</description>
    <inlineHelpText>Enter custom text</inlineHelpText>
    <label>Custom Text</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>