test/fixtures/document/source/objects/TestObj__c/fields/Dependent__c.field-meta.xml
<CustomField>
    <fullName>Dependent__c</fullName>
    <label>Dependent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>