test/fixtures/document/source/objects/TestObj__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>